--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a798">  <td>21/02/12 18:07:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.f()[pri:0, instance:Testing.TestAuto@2928854b]">f</td> 
-  <td>main@1738674023</td>   <td></td> </tr>
+<tr bgcolor="9b9692">  <td>21/02/13 18:04:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTests(java.lang.reflect.Method)[pri:0, instance:Testing.TestAuto@56de5251]">ExecuteTests</td> 
+  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="9b9692">  <td>21/02/13 18:04:15</td>   <td>-139</td> <td title="&gt;&gt;TestAuto.setup()[pri:0, instance:Testing.TestAuto@56de5251]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
+<tr bgcolor="9b9692">  <td>21/02/13 18:04:35</td>   <td>19830</td> <td title="&lt;&lt;TestAuto.teardown()[pri:0, instance:Testing.TestAuto@56de5251]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192171522</td>   <td></td> </tr>
 </table>
