--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ExecuteTests</td>
-<td>&nbsp;</td></tr>
+<td>ExecuteTest</td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTestssecond</td>
+<td>regression sanity </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
