--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,12 +11,51 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ExecuteTeststenth</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTestsfourth</td>
+<td>smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTestsseventh</td>
+<td>sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTeststhird</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ExecuteTest</td>
 <td>regression smoke sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ExecuteTestsfifth</td>
+<td>smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ExecuteTestssecond</td>
+<td>regression sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTestssixth</td>
+<td>regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTestsnineth</td>
+<td>regression smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ExecuteTestseigth</td>
 <td>regression sanity </td>
 </tr>
 <tr>
