--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,3 +1,8 @@
 <h2>Methods that were not run</h2><table>
 <tr><td>Testing.TestAuto.ExecuteTest</td></tr>
+<tr><td>Testing.TestAuto.ExecuteTestsfifth</td></tr>
+<tr><td>Testing.TestAuto.ExecuteTestsnineth</td></tr>
+<tr><td>Testing.TestAuto.ExecuteTestsfourth</td></tr>
+<tr><td>Testing.TestAuto.ExecuteTeststhird</td></tr>
+<tr><td>Testing.TestAuto.ExecuteTeststenth</td></tr>
 </table>
