--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">AutomationExecution_Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,320</td><td>all, regression, smoke, sanity</td><td>smoke</td></tr>
+<tr><td><a href="#t0">AutomationExecution_Chrome</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74,600</td><td>all, regression, smoke, sanity</td><td>smoke</td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AutomationExecution_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Testing.TestAuto</td><td><a href="#m0">ExecuteTestssecond</a></td><td rowspan="1">1613330810753</td><td rowspan="1">19274</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AutomationExecution_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Testing.TestAuto</td><td><a href="#m0">ExecuteTestseigth</a></td><td rowspan="1">1613369948102</td><td rowspan="1">17838</td></tr><tr class="passedeven"><td><a href="#m1">ExecuteTestssecond</a></td><td rowspan="1">1613369891374</td><td rowspan="1">20376</td></tr><tr class="passedeven"><td><a href="#m2">ExecuteTestsseventh</a></td><td rowspan="1">1613369929808</td><td rowspan="1">18292</td></tr><tr class="passedeven"><td><a href="#m3">ExecuteTestssixth</a></td><td rowspan="1">1613369911758</td><td rowspan="1">18048</td></tr></tbody>
 </table>
-<h2>AutomationExecution_Chrome</h2><h3 id="m0">Testing.TestAuto#ExecuteTestssecond</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>AutomationExecution_Chrome</h2><h3 id="m0">Testing.TestAuto#ExecuteTestseigth</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Testing.TestAuto#ExecuteTestssecond</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Testing.TestAuto#ExecuteTestsseventh</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Testing.TestAuto#ExecuteTestssixth</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
