--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@2b6faea6]<br/></td></tr>
-<tr><td>sanity</td><td>TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@2b6faea6]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TestAuto.ExecuteTestseigth(java.lang.String)[pri:8, instance:Testing.TestAuto@3cc2931c]<br/>TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@3cc2931c]<br/>TestAuto.ExecuteTestssixth(java.lang.String)[pri:6, instance:Testing.TestAuto@3cc2931c]<br/></td></tr>
+<tr><td>sanity</td><td>TestAuto.ExecuteTestseigth(java.lang.String)[pri:8, instance:Testing.TestAuto@3cc2931c]<br/>TestAuto.ExecuteTestsseventh(java.lang.String)[pri:7, instance:Testing.TestAuto@3cc2931c]<br/>TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@3cc2931c]<br/></td></tr>
 </table>
