--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -11,32 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ExecuteTeststenth</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ExecuteTestsfourth</td>
-<td>smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ExecuteTestsseventh</td>
-<td>sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ExecuteTeststhird</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ExecuteTest</td>
 <td>regression smoke sanity </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ExecuteTestsfifth</td>
-<td>smoke </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
@@ -44,20 +20,31 @@
 <td>regression sanity </td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>ExecuteTestssixth</td>
-<td>regression </td>
+<td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ExecuteTestsnineth</td>
-<td>regression smoke </td>
+<td>browservalue</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>Testing.TestingDatabaseMethods</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ExecuteTestseigth</td>
-<td>regression sanity </td>
-</tr>
+<td>TestSQLQueries</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
