--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,23 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">AutomationExecution_Chrome</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74,600</td><td>all, regression, smoke, sanity</td><td>smoke</td></tr>
+<tr><td><a href="#t0">DBMethodsExecution</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">807</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">AutomationExecution_Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">23,286</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">24,093</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">AutomationExecution_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Testing.TestAuto</td><td><a href="#m0">ExecuteTestseigth</a></td><td rowspan="1">1613369948102</td><td rowspan="1">17838</td></tr><tr class="passedeven"><td><a href="#m1">ExecuteTestssecond</a></td><td rowspan="1">1613369891374</td><td rowspan="1">20376</td></tr><tr class="passedeven"><td><a href="#m2">ExecuteTestsseventh</a></td><td rowspan="1">1613369929808</td><td rowspan="1">18292</td></tr><tr class="passedeven"><td><a href="#m3">ExecuteTestssixth</a></td><td rowspan="1">1613369911758</td><td rowspan="1">18048</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">DBMethodsExecution &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Testing.TestingDatabaseMethods</td><td><a href="#m0">TestSQLQueries</a></td><td rowspan="1">1613552522728</td><td rowspan="1">773</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">AutomationExecution_Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Testing.TestAuto</td><td><a href="#m1">ExecuteTest</a></td><td rowspan="1">1613552522728</td><td rowspan="1">5</td></tr><tr><th colspan="4">AutomationExecution_Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Testing.TestAuto</td><td><a href="#m2">ExecuteTestssecond</a></td><td rowspan="1">1613552522741</td><td rowspan="1">23238</td></tr></tbody>
 </table>
-<h2>AutomationExecution_Chrome</h2><h3 id="m0">Testing.TestAuto#ExecuteTestseigth</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Testing.TestAuto#ExecuteTestssecond</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Testing.TestAuto#ExecuteTestsseventh</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Testing.TestAuto#ExecuteTestssixth</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>DBMethodsExecution</h2><h3 id="m0">Testing.TestingDatabaseMethods#TestSQLQueries</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>AutomationExecution_Chrome</h2><h3 id="m1">Testing.TestAuto#ExecuteTest</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at Testing.TestAuto.gettingbrowser(TestAuto.java:88)
+	at Testing.TestAuto.ExecuteTest(TestAuto.java:117)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1507)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
+	at java.base/java.lang.Thread.run(Thread.java:830)
+... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Testing.TestAuto#ExecuteTestssecond</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
