--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -56,12 +56,12 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Suite" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="group-Suite" class="navigator-link ">
-                    <span>2 groups</span>
+                    <span>3 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Testing.TestAuto" class="method navigator-link" hash-for-method="ExecuteTest(Chrome)">ExecuteTest(Chrome)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +118,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Testing.TestAuto" class="method navigator-link" hash-for-method="ExecuteTestseigth(Chrome)">ExecuteTestseigth(Chrome)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="Testing.TestAuto" class="method navigator-link" hash-for-method="ExecuteTestssecond(Chrome)">ExecuteTestssecond(Chrome)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Testing.TestAuto" class="method navigator-link" hash-for-method="ExecuteTestsseventh(Chrome)">ExecuteTestsseventh(Chrome)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Testing.TestAuto" class="method navigator-link" hash-for-method="ExecuteTestssixth(Chrome)">ExecuteTestssixth(Chrome)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Testing.TestingDatabaseMethods" class="method navigator-link" hash-for-method="TestSQLQueries">TestSQLQueries</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -134,6 +138,32 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">Testing.TestAuto</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="ExecuteTest(Chrome)">
+                  </a> <!-- ExecuteTest(Chrome) -->
+                  <span class="method-name">ExecuteTest</span>
+                  <span class="parameters">(Chrome)</span>
+                  <div class="stack-trace">java.lang.NullPointerException
+	at Testing.TestAuto.gettingbrowser(TestAuto.java:88)
+	at Testing.TestAuto.ExecuteTest(TestAuto.java:117)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1507)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)
+	at java.base/java.lang.Thread.run(Thread.java:830)
+... Removed 18 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -142,34 +172,25 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ExecuteTestseigth(Chrome)">
-                  </a> <!-- ExecuteTestseigth(Chrome) -->
-                  <span class="method-name">ExecuteTestseigth</span>
-                  <span class="parameters">(Chrome)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="ExecuteTestssecond(Chrome)">
                   </a> <!-- ExecuteTestssecond(Chrome) -->
                   <span class="method-name">ExecuteTestssecond</span>
                   <span class="parameters">(Chrome)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Testing.TestingDatabaseMethods</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ExecuteTestsseventh(Chrome)">
-                  </a> <!-- ExecuteTestsseventh(Chrome) -->
-                  <span class="method-name">ExecuteTestsseventh</span>
-                  <span class="parameters">(Chrome)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ExecuteTestssixth(Chrome)">
-                  </a> <!-- ExecuteTestssixth(Chrome) -->
-                  <span class="method-name">ExecuteTestssixth</span>
-                  <span class="parameters">(Chrome)</span>
+                  <a name="TestSQLQueries">
+                  </a> <!-- TestSQLQueries -->
+                  <span class="method-name">TestSQLQueries</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -184,19 +205,13 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite parallel=&quot;tests&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;DBMethodsExecution&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;Testing.TestingDatabaseMethods&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- DBMethodsExecution --&gt;
   &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;AutomationExecution_Chrome&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
-    &lt;groups&gt;
-      &lt;define name=&quot;all&quot;&gt;
-        &lt;include name=&quot;sanity&quot;/&gt;
-        &lt;include name=&quot;smoke&quot;/&gt;
-        &lt;include name=&quot;regression&quot;/&gt;
-      &lt;/define&gt; &lt;!-- all --&gt;
-      &lt;run&gt;
-        &lt;include name=&quot;all&quot;/&gt;
-        &lt;exclude name=&quot;smoke&quot;/&gt;
-      &lt;/run&gt;
-    &lt;/groups&gt;
     &lt;classes&gt;
       &lt;class name=&quot;Testing.TestAuto&quot;/&gt;
     &lt;/classes&gt;
@@ -212,6 +227,9 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
+                <span class="test-name">DBMethodsExecution (1 class)</span>
+              </li>
+              <li>
                 <span class="test-name">AutomationExecution_Chrome (1 class)</span>
               </li>
             </ul>
@@ -226,15 +244,11 @@
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">ExecuteTestseigth</span>
+                <span class="method-in-group-name">ExecuteTest</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
                 <span class="method-in-group-name">ExecuteTestssecond</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">ExecuteTestssixth</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -242,15 +256,19 @@
               <span class="test-group-name">sanity</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">ExecuteTestseigth</span>
+                <span class="method-in-group-name">ExecuteTest</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
                 <span class="method-in-group-name">ExecuteTestssecond</span>
                 <br/>
               </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">smoke</span>
+              <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">ExecuteTestsseventh</span>
+                <span class="method-in-group-name">ExecuteTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -270,28 +288,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ExecuteTestssecond')
 data.setCell(0, 2, 'Testing.TestAuto')
-data.setCell(0, 3, 20376);
+data.setCell(0, 3, 23238);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ExecuteTestsseventh')
-data.setCell(1, 2, 'Testing.TestAuto')
-data.setCell(1, 3, 18292);
+data.setCell(1, 1, 'TestSQLQueries')
+data.setCell(1, 2, 'Testing.TestingDatabaseMethods')
+data.setCell(1, 3, 773);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ExecuteTestssixth')
+data.setCell(2, 1, 'ExecuteTest')
 data.setCell(2, 2, 'Testing.TestAuto')
-data.setCell(2, 3, 18048);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'ExecuteTestseigth')
-data.setCell(3, 2, 'Testing.TestAuto')
-data.setCell(3, 3, 17838);
+data.setCell(2, 3, 5);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -306,26 +320,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">Testing.TestAuto</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">ExecuteTest</span>
-                <br/>
-                <span class="ignored-method-name">ExecuteTestsfifth</span>
-                <br/>
-                <span class="ignored-method-name">ExecuteTestsnineth</span>
-                <br/>
-                <span class="ignored-method-name">ExecuteTestsfourth</span>
-                <br/>
-                <span class="ignored-method-name">ExecuteTeststhird</span>
-                <br/>
-                <span class="ignored-method-name">ExecuteTeststenth</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -335,22 +332,38 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">Testing.TestAuto</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">setup</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-suite before -->
+              <div class="configuration-class before">
+                <span class="method-name">browservalue</span>
+                <span class="method-start">142 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">ExecuteTest(Chrome)</span>
+                <span class="method-start">156 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Testing.TestingDatabaseMethods</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">TestSQLQueries</span>
+                <span class="method-start">156 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Testing.TestAuto</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">ExecuteTestssecond(Chrome)</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">169 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ExecuteTestssixth(Chrome)</span>
-                <span class="method-start">20384 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ExecuteTestsseventh(Chrome)</span>
-                <span class="method-start">38434 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ExecuteTestseigth(Chrome)</span>
-                <span class="method-start">56728 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-suite after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">23433 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
