--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f7194">  <td>21/02/15 11:49:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTestseigth(java.lang.String)[pri:8, instance:Testing.TestAuto@3cc2931c]">ExecuteTestseigth</td> 
-  <td>TestNG-tests-1@283907054</td>   <td></td> </tr>
-<tr bgcolor="9f7194">  <td>21/02/15 11:48:11</td>   <td>-56727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@3cc2931c]">ExecuteTestssecond</td> 
-  <td>TestNG-tests-1@283907054</td>   <td></td> </tr>
-<tr bgcolor="9f7194">  <td>21/02/15 11:48:49</td>   <td>-18293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTestsseventh(java.lang.String)[pri:7, instance:Testing.TestAuto@3cc2931c]">ExecuteTestsseventh</td> 
-  <td>TestNG-tests-1@283907054</td>   <td></td> </tr>
-<tr bgcolor="9f7194">  <td>21/02/15 11:48:31</td>   <td>-36343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTestssixth(java.lang.String)[pri:6, instance:Testing.TestAuto@3cc2931c]">ExecuteTestssixth</td> 
-  <td>TestNG-tests-1@283907054</td>   <td></td> </tr>
+<tr bgcolor="babed1">  <td>21/02/17 14:32:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTest(java.lang.String)[pri:1, instance:Testing.TestAuto@7880cdf3]">ExecuteTest</td> 
+  <td>TestNG-tests-2@1553461208</td>   <td></td> </tr>
+<tr bgcolor="babed1">  <td>21/02/17 14:32:02</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@7880cdf3]">ExecuteTestssecond</td> 
+  <td>TestNG-tests-2@1553461208</td>   <td></td> </tr>
+<tr bgcolor="adf1b2">  <td>21/02/17 14:32:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestingDatabaseMethods.TestSQLQueries()[pri:0, instance:Testing.TestingDatabaseMethods@25d250c6]">TestSQLQueries</td> 
+  <td>TestNG-tests-1@1923924016</td>   <td></td> </tr>
+<tr bgcolor="babed1">  <td>21/02/17 14:32:02</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestAuto.browservalue()[pri:0, instance:Testing.TestAuto@7880cdf3]">&gt;&gt;browservalue</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1553461208</td>   <td></td> </tr>
+<tr bgcolor="babed1">  <td>21/02/17 14:32:02</td>   <td>-152</td> <td title="&gt;&gt;TestAuto.setup()[pri:0, instance:Testing.TestAuto@7880cdf3]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
+<tr bgcolor="babed1">  <td>21/02/17 14:32:26</td>   <td>23277</td> <td title="&lt;&lt;TestAuto.teardown()[pri:0, instance:Testing.TestAuto@7880cdf3]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1782580546</td>   <td></td> </tr>
 </table>
