--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,5 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>TestAuto.ExecuteTest(java.lang.String)[pri:1, instance:Testing.TestAuto@7ee955a8]<br/>TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@7ee955a8]<br/></td></tr>
-<tr><td>sanity</td><td>TestAuto.ExecuteTest(java.lang.String)[pri:1, instance:Testing.TestAuto@7ee955a8]<br/>TestAuto.ExecuteTestssecond(java.lang.String)[pri:2, instance:Testing.TestAuto@7ee955a8]<br/></td></tr>
-<tr><td>smoke</td><td>TestAuto.ExecuteTest(java.lang.String)[pri:1, instance:Testing.TestAuto@7ee955a8]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
